# eq-example

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: build-conda.yaml  create-release.yaml  lint.yaml  publish-conda.yaml  release.yaml
requirements.d/pypi/: dev.txt  docs.txt  host.txt  test.txt
requirements/pypi/: run.txt
src/eq/lib/example/: __init__.py  cli.py
tests/: conftest.py  test_cli.py  test_impoty.py
